# genai_experiment_template

./: .pre-commit-config.yaml  llms.yaml  mlflow.db  pyproject.toml
datasets/dialog_summarization/CSV/: hiddentest_dialogue.csv  hiddentest_topic.csv
notebooks/: 00_template.ipynb  01_ai_gateway.ipynb  02_datasets.ipynb  03_evaluations.ipynb
prompts/summarization/: dialog_summarization.md
src/utils/: mlflow.py  mlflow_utils.py
tests/: dummy_test.py
