[project]
name = "genai-experiment"
version = "0.1.0"
description = "GenAI experiment template with MlFlow integration."
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "black>=26.3.1",
    "docformatter>=1.7.7",
    "flake8>=7.3.0",
    "langchain>=1.2.12",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "mlflow>=3.10.1",
    "mypy>=1.19.1",
    "pydocstyle>=6.3.0",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.uv]
package = false

[tool.black]
line-length = 80
target-version = ['py312']

[tool.flake8]
max-line-length = 80
